refactor: modify index page layout and background img

--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -15,10 +15,8 @@ header {
   z-index: -1;
   margin: -5px;
   height: 360px;
-  background: #dddddd center center
-    url("https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/5720/restaurants-list-cover.jpg");
+  background: #dddddd center center url("../image/retaurant-bg-img.jpg");
   background-size: cover;
-  filter: blur(3px);
 }
 
 .search-bar .search-bar-outer {
