--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
     <header>
       <!-- navigation -->
       <nav class="navbar navbar-light bg-light">
-        <div class="container">
+        <div class="container justify-content-between">
           <a class="navbar-brand" href="/">
             <img
               src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png"
@@ -33,6 +33,7 @@
             />
             我的餐廳清單
           </a>
+          <a href="/restaurants/new" class="btn btn-primary">新增餐廳</a>
         </div>
       </nav>
       <div class="banner"></div>
