feat: add login page, register page and require express-session, connect-flash

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -56,10 +56,9 @@
       <div class="col col-3">
         <section class="right-section">
           <h1>還不是會員?</h1>
-          <a href="/register" class="btn btn-primary">點我註冊</a>
+          <a href="/auth/register" class="btn btn-primary">點我註冊</a>
         </section>
       </div>
     </div>
-
   </div>
 </div>
