--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -4,12 +4,17 @@
       <div class="col col-6">
         <h1 class="mb-3">註冊會員</h1>
         <form
-          action="/auth/login"
+          action="/auth/register"
           method="POST"
           id="login-form"
           class="needs-validation fw-bolder"
           novalidate
         >
+          {{#if fail_msg}}
+            <div class="alert alert-warning" role="alert">
+              <strong>{{fail_msg}}</strong>
+            </div>
+          {{/if}}
           <div class="mb-3">
             <label for="name" class="form-label">Name</label>
             <input
@@ -53,7 +58,7 @@
               class="form-control"
               aria-describedby="passwordHelpBlock"
               name="password"
-              minlength="8"
+              {{! minlength="8" }}
               maxlength="20"
               required
             />
