feat: add checking user is still in login when GET to home page

--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -198,7 +198,7 @@
         data-bs-toggle="modal"
         data-bs-target="#deleteModal"
       >Delete</button>
-      <a href="/" class="btn btn-success ms-2"><i class="fa-solid fa-reply"></i>
+      <a href="/restaurants" class="btn btn-success ms-2"><i class="fa-solid fa-reply"></i>
         Home</a>
     </form>
   </div>
