--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -184,7 +184,7 @@
         class="btn btn-primary"
         id="submitButton"
       >Add</button>
-      <a href="/" class="ms-3 btn btn-success"><i class="fa-solid fa-reply"></i>
+      <a href="/restaurants" class="ms-3 btn btn-success"><i class="fa-solid fa-reply"></i>
         Home</a>
     </form>
 
