--- a/views/show.handlebars
+++ b/views/show.handlebars
@@ -47,7 +47,7 @@
         style="max-width: 600px;"
       />
       <div class="text-center">
-        <a href="/" class="btn btn-success"><i class="fa-solid fa-reply"></i>
+        <a href="/restaurants" class="btn btn-success"><i class="fa-solid fa-reply"></i>
           Home</a>
         <a
           href="/restaurants/{{restaurant._id}}/edit"
