feat: show categories of user's restaurants in new/edit page to select

--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -56,12 +56,9 @@
           required
         />
         <datalist id="category-list">
-          <option value="美式"></option>
-          <option value="中東料理"></option>
-          <option value="日本料理"></option>
-          <option value="義式餐廳"></option>
-          <option value="酒吧"></option>
-          <option value="咖啡"></option>
+          {{#each categories}}
+            <option value="{{this}}"></option>
+          {{/each}}
         </datalist>
         <div class="valid-feedback">
         </div>
