refactor: add method-override module

--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -3,7 +3,8 @@
 <div class="row">
   <div class="col col-sm-6 mx-auto">
     <form
-      action="/restaurants/{{_id}}/edit"
+    {{!-- 使用method-override將POST改為PUT --}}
+      action="/restaurants/{{_id}}/?_method=PUT"
       id="new-form"
       class="needs-validation fw-bolder"
       method="POST"
@@ -229,7 +230,8 @@
           data-bs-dismiss="modal"
         >Close</button>
         <form
-          action="/restaurants/{{_id}}/delete"
+        {{!-- 使用method-override將POST改為DELTEE --}}
+          action="/restaurants/{{_id}}/?_method=DELETE"
           method="POST"
           class="my-0 d-flex align-items-center"
         >
