--- a/views/show.handlebars
+++ b/views/show.handlebars
@@ -46,7 +46,7 @@
         alt="{{restaurant.name}}"
         style="max-width: 600px;"
       />
-      <div class="text-center">
+      <div class="text-center mb-2">
         <a href="/restaurants" class="btn btn-success"><i class="fa-solid fa-reply"></i>
           Home</a>
         <a
