--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css"
     />
-    <link rel="stylesheet" href="/stylesheet/bootstrap.css" />
+    <link
+      rel="stylesheet"
+      href="https://bootswatch.com/5/sandstone/bootstrap.min.css"
+    />
     <link rel="stylesheet" href="/stylesheet/style.css" />
   </head>
   <body>
@@ -57,8 +60,9 @@
       src="https://kit.fontawesome.com/fe29b26733.js"
       crossorigin="anonymous"
     ></script>
-    <script src="/javascript/popper.js"></script>
-    <script src="/javascript/bootstrap.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    ></script>
     <script src="/javascript/validate.js"></script>
   </body>
 </html>
