refactor: modify new/edit page RWD　layout

--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,7 +1,7 @@
 {{! edit page }}
 <h1 class="mb-1 restaurant-show-title">Edit information</h1>
 <div class="row">
-  <div class="col col-sm-6 mx-auto">
+  <div class="col-10 col-sm-6 mx-auto">
     <form
     {{!-- 使用method-override將POST改為PUT --}}
       action="/restaurants/{{_id}}/?_method=PUT"
