--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -1,7 +1,7 @@
 {{! add new restaurant page }}
 <h1 class="mb-1 restaurant-show-title">Add new restaurant</h1>
 <div class="row">
-  <div class="col col-sm-6 mx-auto">
+  <div class="col-10 col-sm-6 mx-auto">
     <form
       action="/restaurants"
       id="new-form"
