--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,74 +1,72 @@
 <div class="row mt-2">
-  <div class="col col-8 mx-auto">
-    <div class="row justify-content-center">
-      <div class="col col-7">
-        <section class="left-section">
-          <h1 class="mb-3">會員登入</h1>
-          <form
-            action="/auth/login"
-            method="POST"
-            id="login-form"
-            class="needs-validation fw-bolder"
-            novalidate
-          >
-            {{#if success_msg}}
-              <div class="alert alert-success" role="alert">
-                <strong>{{success_msg}}</strong>
-              </div>
-            {{/if}}
-            {{#if error}}
-              <div class="alert alert-warning" role="alert">
-                <strong>{{error}}</strong>
-              </div>
-            {{/if}}
-            <div class="mb-3">
-              <label for="username" class="form-label">Email address</label>
-              <input
-                type="email"
-                class="form-control"
-                id="username"
-                placeholder="name@example.com"
-                name="username"
-                required
-              />
-              <div class="valid-feedback">
-              </div>
-              <div class="invalid-feedback">
-                This field is invalid !
-              </div>
-            </div>
+  <div class="col col-md-6 mx-auto">
+    <div class="card card-body">
+      <h1 class="mb-3 text-center">會員登入</h1>
+      <form
+        action="/auth/login"
+        method="POST"
+        id="login-form"
+        class="needs-validation fw-bolder"
+        novalidate
+      >
+        {{#if success_msg}}
+          <div class="alert alert-success" role="alert">
+            <strong>{{success_msg}}</strong>
+          </div>
+        {{/if}}
+        {{#if error}}
+          <div class="alert alert-warning" role="alert">
+            <strong>{{error}}</strong>
+          </div>
+        {{/if}}
+        <div class="mb-3">
+          <label for="username" class="form-label">Email address</label>
+          <input
+            type="email"
+            class="form-control"
+            id="username"
+            placeholder="name@example.com"
+            name="username"
+            required
+          />
+          <div class="valid-feedback">
+          </div>
+          <div class="invalid-feedback">
+            This field is invalid !
+          </div>
+        </div>
 
-            <div class="mb-3">
-              <label for="password" class="form-label">Password</label>
-              <input
-                type="password"
-                id="password"
-                class="form-control"
-                aria-describedby="passwordHelpBlock"
-                name="password"
-                minlength="8"
-                maxlength="20"
-                required
-              />
-              <div class="valid-feedback">
-              </div>
-              <div class="invalid-feedback">
-                This field is invalid !
-              </div>
-              <small id="passwordHelpBlock" class="form-text">
-                Your password must be 8-20 characters long
-              </small>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
-        </section>
-      </div>
-      <div class="col col-3">
-        <section class="right-section">
-          <h1>還不是會員?</h1>
-          <a href="/auth/register" class="btn btn-primary">點我註冊</a>
-        </section>
-      </div>
+        <div class="mb-3">
+          <label for="password" class="form-label">Password</label>
+          <input
+            type="password"
+            id="password"
+            class="form-control"
+            aria-describedby="passwordHelpBlock"
+            name="password"
+            minlength="8"
+            maxlength="20"
+            placeholder="Enter your password..."
+            required
+          />
+          <div class="valid-feedback">
+          </div>
+          <div class="invalid-feedback">
+            This field is invalid !
+          </div>
+          <small id="passwordHelpBlock" class="form-text">
+            Your password must be 8-20 characters long
+          </small>
+        </div>
+        <div class="d-grid col-11 mx-auto">
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+
+        <p class="mb-0 mt-3">
+          還不是會員?
+          <a href="/auth/register">點我註冊</a>
+        </p>
+      </form>
     </div>
   </div>
 </div>
