--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,7 +26,7 @@
       <!-- navigation -->
       <nav class="navbar navbar-light bg-light">
         <div class="container justify-content-between">
-          <a class="navbar-brand" href="/">
+          <a class="navbar-brand" href="/restaurants">
             <img
               src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png"
               width="30"
