refactor: modify register function and ui

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,7 +1,7 @@
 <div class="row mt-2">
   <div class="col col-md-6 mx-auto">
     <div class="card card-body">
-      <h1 class="mb-3 text-center">會員登入</h1>
+      <h1 class="mb-2 text-center">會員登入</h1>
       <form
         action="/auth/login"
         method="POST"
@@ -50,9 +50,8 @@
           </small>
         </div>
         <div class="d-grid col-11 mx-auto">
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-primary">Login</button>
         </div>
-
         <p class="mb-0 mt-3">
           還不是會員?
           <a href="/auth/register">點我註冊</a>
