--- a/views/partials/message.handlebars
+++ b/views/partials/message.handlebars
@@ -1,20 +1,8 @@
 {{!  for flash and  customized message}}
 
 {{#if success_msg}}
-  <div class="alert alert-warning alert-dismissible fade show" role="alert">
+  <div class="alert alert-success alert-dismissible fade show" role="alert">
     <strong>{{success_msg}}!</strong>
-    <button
-      type="button"
-      class="btn-close"
-      data-bs-dismiss="alert"
-      aria-label="Close"
-    ></button>
-  </div>
-{{/if}}
-
-{{#if error}}
-  <div class="alert alert-danger alert-dismissible fade show" role="alert">
-    <strong>{{error}}</strong>
     <button
       type="button"
       class="btn-close"
@@ -39,6 +27,32 @@
 {{#if warning_msg}}
   <div class="alert alert-warning alert-dismissible fade show" role="alert">
     <strong>{{warning_msg}}</strong>
+    <button
+      type="button"
+      class="btn-close"
+      data-bs-dismiss="alert"
+      aria-label="Close"
+    ></button>
+  </div>
+{{/if}}
+
+{{#if register_fail_msg}}
+  {{#each register_fail_msg}}
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+      <strong>{{this.message}}</strong>
+      <button
+        type="button"
+        class="btn-close"
+        data-bs-dismiss="alert"
+        aria-label="Close"
+      ></button>
+    </div>
+  {{/each}}
+{{/if}}
+
+{{#if error}}
+  <div class="alert alert-danger alert-dismissible fade show" role="alert">
+    <strong>{{error}}</strong>
     <button
       type="button"
       class="btn-close"
