--- a/views/partials/message.handlebars
+++ b/views/partials/message.handlebars
@@ -2,7 +2,7 @@
 
 {{#if success_msg}}
   <div class="alert alert-success alert-dismissible fade show" role="alert">
-    <strong>{{success_msg}}!</strong>
+    <strong>{{success_msg}}</strong>
     <button
       type="button"
       class="btn-close"
