refactor: modify homeRoute

--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -95,7 +95,7 @@
         </div>
         <p class="mb-0 mt-3">
           已經註冊過了?
-          <a href="/home">點我登入</a>
+          <a href="/">點我登入</a>
         </p>
       </form>
     </div>
