feat: add facebook login strategy by passport

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -50,7 +50,8 @@
           </small>
         </div>
         <div class="d-grid col-11 mx-auto">
-          <button type="submit" class="btn btn-primary">Login</button>
+          <button type="submit" class="btn btn-primary mb-2">Login</button>
+          <a href="/auth/facebook" class="btn btn-info">Facebook</a>
         </div>
         <p class="mb-0 mt-3">
           還不是會員?
