feat: add google strategy by passport

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -51,7 +51,8 @@
         </div>
         <div class="d-grid col-11 mx-auto">
           <button type="submit" class="btn btn-primary mb-2">Login</button>
-          <a href="/auth/facebook" class="btn btn-info">Facebook</a>
+          <a href="/auth/facebook" class="btn btn-info mb-2">Facebook</a>
+          <a href="/auth/google" class="btn btn-secondary">Google</a>
         </div>
         <p class="mb-0 mt-3">
           還不是會員?
