--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -178,7 +178,7 @@
       </div>
       {{! error message alert -start }}
       {{#if errMessage}}
-        <div class="alert alert-success" role="alert">
+        <div class="alert alert-light" role="alert">
           {{{errMessage}}}
         </div>
       {{/if}}
